--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,4 +1,4 @@
-<div class="background-color-light-box">
+<div id="background-color-light-box-history">
   <h1>Your History</h1>
     <% if current_user.donor %>
       <% if current_user.offers.last.booking %>
