--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -83,7 +83,8 @@ a:hover {
   text-align: center;
   padding: 8px 80px;
   color: white;
-  width: 95%;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .accept-btn {
@@ -123,5 +124,5 @@ background-color: $dark-purple;
 }
 
 .spacer {
-  height: 50vh;
+  height: 8vh;
 }
