--- a/app/assets/stylesheets/components/_mobile-menu.scss
+++ b/app/assets/stylesheets/components/_mobile-menu.scss
@@ -35,6 +35,7 @@
 }
 .wrapper .list-mobile-menu{
   position: absolute;
+  margin-left: -27px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
