--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -99,9 +99,13 @@ background-color: $dark-purple;
   display: flex;
   align-items: center;
   text-align: center;
-  padding: 8px 110px;
+  // padding: 8px 110px;
   color: white;
   width: 100%;
+    a {
+      color: white;
+      margin: 0 auto;
+    }
 }
 
 .submit-btn {
