--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,11 +1,15 @@
 .card-offers {
-  margin : 30px;
+  margin-top : 30px;
   border-radius: 40px;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
   padding: 15px;
   background: rgba(255, 255, 255, 0.6);
+}
+
+.card-offers-box {
+  padding-bottom: 30px;
 }
 
 .title {
@@ -106,8 +110,10 @@
   width: 30px;
 }
 
-.card-offers .fa-euro-sign {
+.fa-euro-sign {
   font-size: 22px;
+  position: relative;
+  left: 7px;
 }
 
 #plastic-bottle {
