--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,23 +12,26 @@
   text-align: center;
 }
 
-.background-color {
-  background: linear-gradient(45deg, #df2a4e, #3F5EFB);
-}
+// .background-color {
+//   background: linear-gradient(45deg, #df2a4e, #3F5EFB);
+// }
 
-.background-color-light {
-  background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
-}
+// .background-color-light {
+//   // background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+//   background: linear-gradient(45deg, #102eff, #d2379b);
+// }
 
 
-.background-color-light-box {
-  background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
-  height: 100vh;
-}
+// .background-color-light-box {
+//   // background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+//   background: linear-gradient(45deg, #102eff, #d2379b);
+//   height: 100vh;
+// }
 
-#background-color-light-box-history {
-  background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
-}
+// #background-color-light-box-history {
+//   // background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+//   background: linear-gradient(45deg, #102eff, #d2379b);
+// }
 
 
 // }
