--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,7 @@
 $white: rgba(255,255,255,0.3);
 
 #body-form {
-  background: linear-gradient(45deg, #df2a4e, #3F5EFB);
+  // background: linear-gradient(45deg, #df2a4e, #3F5EFB);
   font-family: 'Montserrat', sans-serif;
 }
 
