--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
   </head>
 
   <body>
+  <div class="image-hero-area">
+  </div>
     <%# <%= render 'shared/navbar' %>
     <%#= render 'shared/flashes' %>
     <%= yield %>
