--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container background-color-light">
+<div class="content-container">
 <div class="title">
 <div class="offers-title">
   <h3>Here are all active offers</h3>
@@ -117,3 +117,4 @@
     <% end %>
   <% end %>
 </div>
+<%= render 'shared/footer' %>
