--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
 	.list-footer {
     color: black !important;
 		position: relative;
-		width: 350px;
+		width: 100%;
 		height: 50px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
