--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,8 +1,6 @@
-<div class="background-color-light-box">
+<div class="content-container">
 
 <h1 class="offers-title">Your History</h1>
-
-
     <% if current_user.donor %>
       <% if current_user.offers.last.booking %>
        <% current_user.offers.first(4).each do |offer| %>
@@ -107,5 +105,5 @@
         <% end %>
       <% end %>
     <% end %>
-  <%= render 'shared/footer' %>
-</div>
+  </div>
+<%= render 'shared/footer' %>
