--- a/app/views/pages/pfander_dashboard.html.erb
+++ b/app/views/pages/pfander_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="background-color-light-box">
+<div class="content-container">
   <h1 class="offers-title">Your Bookings</h1>
     <% if current_user.bookings.any? %>
       <% current_user.bookings.each do |booking| %>
@@ -19,5 +19,5 @@
         <% end %>
       <% end %>
     <% end %>
+  </div>
   <%= render 'shared/footer' %>
-</div>
