added fonts and customized button on homepage

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -24,7 +24,7 @@
 			list-style: none;
       text-decoration: none;
 			place-items: center;
-			font-family: "montserrat";
+			font-family: $body-font;
 			color: black !important;
 			z-index: 10;
 			cursor: pointer;
