--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
+
 $font:'Source Sans Pro', sans-serif;
 $primary:#FF0072;
 $second:#644cad;
@@ -20,7 +22,7 @@ $third:#4426a8;
   width:270px;
   font-weight:bold;
   padding:14px 0px;
-  border:3px solid $second;
+  border:7px solid $second;
   border-radius:15px;
   position:relative;
   box-shadow: 0 2px 10px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.1);
@@ -139,4 +141,8 @@ background-color: $dark-purple;
   padding: 8px 80px;
   color: white;
   width: 95%;
+}
+
+#btn-change {
+  background-color: white;
 }
