Working on typing effect

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
       <div class="header"><h1>PfandMe</h1></div>
     </div>
     <% if current_user && current_user.donor %>
-    <h5 style="text-align: center; margin: 10px 0 20px 0px">Get those pesky bottles out of your flat or office!</h5>
+    <h5 style="text-align: center; margin: 10px 0 20px 0px" id="Typing">Get those pesky bottles out of your flat or office!</h5>
     <div class="flex-dark">
       <%= link_to new_offer_path do %>
         <div class="btn btn-purple">Create Offer</div>
