added logo to homepage

--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -10,3 +10,8 @@
   text-shadow: 0 13.36px 8.896px #b370a2,0 -2px 1px #fff;
   letter-spacing: 2px;
 }
+
+.top {
+  display: flex;
+  flex-direction: column;
+}
