--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -88,7 +88,7 @@ a:hover {
 }
 
 .accept-btn {
-background-color: $dark-purple;
+  background-color: $dark-purple;
   border: 4px solid #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -103,6 +103,10 @@ background-color: $dark-purple;
       color: white;
       margin: 0 auto;
     }
+}
+
+.accept-btn:focus {
+  outline:none !important;
 }
 
 .submit-btn {
