user avatar and logo etc

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,11 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.user-avatar {
+  background-image: url("https://www.w3schools.com/w3images/avatar2.png");
+  background-position: center;
+  background-size: cover;
+  border-radius: 25px;
+  border: 2px solid rgb(238, 237, 237);
+}
