--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -7,11 +7,15 @@
     width: 100%;
 }
 
-h1,h5 {
+h1,h2,h3,h4,h5 {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+h3 {
+  padding-bottom: 15px;
 }
 
 .form-page{
