--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,6 +1,6 @@
 <div class="background-color-light-box">
 
-<h1 class="offers-title">Your History</h1>
+<h1 class="offers-title">Past Offers</h1>
 
 
     <% if current_user.donor %>
