--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container background-color-light">
 <div class="title">
 <div class="offers-title">
-  <h3>Here are all active offers</h3>
+  <h3>Active Offers</h3>
 </div>
 </div>
 <%# search bar %>
