--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
 	.list-footer {
     color: black !important;
 		position: relative;
-		width: 100%;
+		width: 350px;
 		height: 50px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
@@ -24,7 +24,7 @@
 			list-style: none;
       text-decoration: none;
 			place-items: center;
-			font-family: $body-font;
+			font-family: "montserrat";
 			color: black !important;
 			z-index: 10;
 			cursor: pointer;
