map cards button tweaks

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -7,7 +7,7 @@
 <%# search bar %>
 <form action="" class="form-page">
     <input type="search" id="searchfield" placeholder='Enter address' required data-behavior="autocomplete">
-    <input type="button" class="fa fa-search" action="submit" />
+    <%# <input type="button" class="fa fa-search" action="submit" /> %>
 </form>
 
 <%# geocoding - adding array of markers %>
