--- a/app/assets/stylesheets/components/_map_card.scss
+++ b/app/assets/stylesheets/components/_map_card.scss
@@ -8,5 +8,14 @@
 }
 
 .view {
-  padding: 5px 70px;
+  padding: 5px 68px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.0);
+  border: 0;
+  margin: 0px 0px 0px 5px;
+}
+
+.card-view {
+  padding: 5px 5px;
+  margin: 0px 0px 0px 0px;
+  position: relative;
 }
