--- a/app/views/offers/_map_box.html.erb
+++ b/app/views/offers/_map_box.html.erb
@@ -6,5 +6,7 @@
 
     <p><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Time</title><path d="M256 64C150 64 64 150 64 256s86 192 192 192 192-86 192-192S362 64 256 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 128v144h96"/></svg> &nbsp; <%= user.offers.last.timeslot %></p>
 
+    <div class="fixed-bottom card-view">
     <a href="#<%= user.offers.last.id %>" class="accept-btn view">View</a>
+    </div>
 </div>
